# fontSamples

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  script.py
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  python-test.yml  test-and-lint.yml
src/fontsamples/: __init__.py  cli.py  generator.py
tests/: test_main.py
